[tool.poetry]
name = "kidney-exchange-problem"
version = "0.1.0"
description = "Analysis of Kidney Exchange Problem and Variations"
authors = ["giraycoskun <giraycoskun@sabanciuniv.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kidney_exchange_problem"}]

[tool.poetry.dependencies]
python = "^3.10"
ortools = "^9.4.1874"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
